// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Manual Inputs > Trade Op main view component tests renders empty state when payments data is not yet fetched 1`] = `
<div
  class="sc-jSgupP kpIYLA"
>
  <table
    class="Table-oyilxr-0 jQhyhB table"
  >
    <caption
      class="Caption-sc-1miu1rz-0 eQOCZM"
    >
      List of Github React Repositories
    </caption>
    <thead
      class=""
    >
      <tr
        class="table-active"
      >
        <th
          class=""
        >
          
          Name
        </th>
        <th
          class=""
        >
          <svg
            height="24px"
            style="vertical-align: sub;"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <g
              data-name="Layer 2"
            >
              <g
                data-name="star"
              >
                <rect
                  height="24"
                  opacity="0"
                  transform="rotate(90 12 12)"
                  width="24"
                />
                <path
                  d="M17.56 21a1 1 0 0 1-.46-.11L12 18.22l-5.1 2.67a1 1 0 0 1-1.45-1.06l1-5.63-4.12-4a1 1 0 0 1-.25-1 1 1 0 0 1 .81-.68l5.7-.83 2.51-5.13a1 1 0 0 1 1.8 0l2.54 5.12 5.7.83a1 1 0 0 1 .81.68 1 1 0 0 1-.25 1l-4.12 4 1 5.63a1 1 0 0 1-.4 1 1 1 0 0 1-.62.18z"
                  fill="#fbcc32"
                />
              </g>
            </g>
          </svg>
          Stars
        </th>
        <th
          class=""
        >
          <svg
            height="24px"
            style="vertical-align: sub;"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <path
              d="M17,6.06a3,3,0,0,0-1.15,5.77A2,2,0,0,1,14,13.06H10a3.91,3.91,0,0,0-2,.56V7.88a3,3,0,1,0-2,0v8.36a3,3,0,1,0,2.16.05A2,2,0,0,1,10,15.06h4a4,4,0,0,0,3.91-3.16A3,3,0,0,0,17,6.06Zm-10-2a1,1,0,1,1-1,1A1,1,0,0,1,7,4.06Zm0,16a1,1,0,1,1,1-1A1,1,0,0,1,7,20.06Zm10-10a1,1,0,1,1,1-1A1,1,0,0,1,17,10.06Z"
            />
          </svg>
          Forks
        </th>
      </tr>
    </thead>
    <tbody
      class="Tbody-sc-14l4jy7-0"
    />
  </table>
</div>
`;

exports[`Manual Inputs > Trade Op main view component tests renders payments inputs table when the data is loaded 1`] = `
<div
  class="sc-jSgupP kpIYLA"
>
  <table
    class="Table-oyilxr-0 jQhyhB table"
  >
    <caption
      class="Caption-sc-1miu1rz-0 eQOCZM"
    >
      List of Github React Repositories
    </caption>
    <thead
      class=""
    >
      <tr
        class="table-active"
      >
        <th
          class=""
        >
          
          Name
        </th>
        <th
          class=""
        >
          <svg
            height="24px"
            style="vertical-align: sub;"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <g
              data-name="Layer 2"
            >
              <g
                data-name="star"
              >
                <rect
                  height="24"
                  opacity="0"
                  transform="rotate(90 12 12)"
                  width="24"
                />
                <path
                  d="M17.56 21a1 1 0 0 1-.46-.11L12 18.22l-5.1 2.67a1 1 0 0 1-1.45-1.06l1-5.63-4.12-4a1 1 0 0 1-.25-1 1 1 0 0 1 .81-.68l5.7-.83 2.51-5.13a1 1 0 0 1 1.8 0l2.54 5.12 5.7.83a1 1 0 0 1 .81.68 1 1 0 0 1-.25 1l-4.12 4 1 5.63a1 1 0 0 1-.4 1 1 1 0 0 1-.62.18z"
                  fill="#fbcc32"
                />
              </g>
            </g>
          </svg>
          Stars
        </th>
        <th
          class=""
        >
          <svg
            height="24px"
            style="vertical-align: sub;"
            version="1.1"
            viewBox="0 0 24 24"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <path
              d="M17,6.06a3,3,0,0,0-1.15,5.77A2,2,0,0,1,14,13.06H10a3.91,3.91,0,0,0-2,.56V7.88a3,3,0,1,0-2,0v8.36a3,3,0,1,0,2.16.05A2,2,0,0,1,10,15.06h4a4,4,0,0,0,3.91-3.16A3,3,0,0,0,17,6.06Zm-10-2a1,1,0,1,1-1,1A1,1,0,0,1,7,4.06Zm0,16a1,1,0,1,1,1-1A1,1,0,0,1,7,20.06Zm10-10a1,1,0,1,1,1-1A1,1,0,0,1,17,10.06Z"
            />
          </svg>
          Forks
        </th>
      </tr>
    </thead>
    <tbody
      class="Tbody-sc-14l4jy7-0"
    >
      <tr
        class=""
      >
        <td
          align="Name"
          class=""
        >
          <a
            class="A-sc-70cat-0 ljzaKq"
            href="https://github.com/React-native"
            target="_blank"
          >
            React-native
          </a>
        </td>
        <td
          align="Stars"
          class=""
        >
          <span
            class="sc-hKgILt gKBYtv"
          >
            93,288
          </span>
        </td>
        <td
          align="Forks"
          class=""
        >
          <span
            class="sc-hKgILt gKBYtv"
          >
            988,327
          </span>
        </td>
      </tr>
      <tr
        class=""
      >
        <td
          align="Name"
          class=""
        >
          <a
            class="A-sc-70cat-0 ljzaKq"
            href="https://github.com/babel-react"
            target="_blank"
          >
            babel-react
          </a>
        </td>
        <td
          align="Stars"
          class=""
        >
          <span
            class="sc-hKgILt gKBYtv"
          >
            156,788
          </span>
        </td>
        <td
          align="Forks"
          class=""
        >
          <span
            class="sc-hKgILt gKBYtv"
          >
            32,756
          </span>
        </td>
      </tr>
      <tr
        class=""
      >
        <td
          align="Name"
          class=""
        >
          <a
            class="A-sc-70cat-0 ljzaKq"
            href="https://github.com/next"
            target="_blank"
          >
            next.js
          </a>
        </td>
        <td
          align="Stars"
          class=""
        >
          <span
            class="sc-hKgILt gKBYtv"
          >
            288
          </span>
        </td>
        <td
          align="Forks"
          class=""
        >
          <span
            class="sc-hKgILt gKBYtv"
          >
            34,998
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Manual Inputs > Trade Op main view component tests renders screen loader when the data is loading 1`] = `
<div
  class="sc-jSgupP kpIYLA"
>
  <div
    class="sc-eCssSg jyVNWN"
  />
</div>
`;
